# Agentic-Django-Backend-Generator

./: .developer_feedback.sqlite  .gitignore  COMPLETE_OPTIMIZATION_GUIDE.md  OPTIMIZATION_GUIDE.md  README.md  agent_backend_builder.py  api_agent.py  authentication_agent.py  business_logic_agent.py  enterprise_backend_builder.py  feedback_demo.py  feedback_integration_system.py  generate_django_backend.py  integrated_feedback_system.py  integration_example.py  massive_erd.json  model_config.py  optimized_agent_system.py  phase2_specialized_agents.py  priority2_enhancements.py  priority3_advanced_features.py  priority3_demo_simple.py  pyproject.toml  requirements.txt  sample_erd.json  sample_erd_enterprise.json  starter-agent-prompt.md  testing_agent.py  universal_backend_builder.py  vector_db_integration.py  vector_db_setup_guide.py
